--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,13 @@
 max_tokens: 2048
 
 data_dir: data
-#data_file: covid.csv
+
 #data_file: covid_2_class.csv
-#data_file: touche.csv
 data_file: touche_2_class.csv
+
+prompt_name: classify_2_class_short
+
+#model_id: gpt-4o
+model_id: anthropic.claude-3-5-sonnet-20240620-v1:0
 
 results_file: database.db
